Descrica da Inferencia e detalhes do Processo

--- a/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
@@ -228,6 +228,7 @@ Definimos $cat(t_n) \in Cat(P)$ como a Categoria atribuída ao Tipo $t_n \in T(P
 pelo Provedor $P$.
 
 \subsection{Configurações}
+\label{sec:formalizacao_configuracoes}
 Seja $c$ um grupo com um certo número de Máquinas Virtuais $i(t)$.
 
 Dizemos que $c$ é uma Configuração se $\forall \; i(t) \in c, t$ é constante.
@@ -290,6 +291,7 @@ $W = \{w_1, w_2, \dotsc, w_{|W|}\}\; | \; w_n \in W, 1 \leq n \leq |W| \iff w_n 
 da Aplicação sob Teste.
 
 \subsection{Resultados}
+\label{subsec:formalizacao_resultados}
 Um Resultado $r$ é uma quádrupla no formato $\{m, v, cpu, mem\}$ onde:
 
 $m \in M(A)$ é a Métrica de Desempenho medida no Resultado;
